# Dining_Philosophers_Problem

./: CMakeLists.txt  README.md
headers/: Fork.h  Parameters.h  Philosopher.h  Table.h  Visualizer.h
source/: Fork.cpp  Philosopher.cpp  Table.cpp  Visualizer.cpp  main.cpp
